Fix bug where dashboard is off-center for hybrid layout

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -17,6 +17,10 @@
       background-color: #5b2;
     }
   }
+  @include if-hybrid-layout() {
+    margin-left: auto;
+    margin-right: auto;
+  }
   @include if-compact-layout() {
     width: auto;
   }
